--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,4 @@
 <resources>
-    <string name="app_name">MovieHub</string>
-    <string name="movies">Movies</string>
-    <string name="tv_shows">TV Shows</string>
-    <string name="people">People</string>
-    <string name="reload">Reload</string>
-    <string name="check_your_network_connection">Can\'t load data. Check your network connection.</string>
-    <string name="content_desc">Content Description</string>
-
     <!-- transition shared elements -->
     <string name="transition_movie_thumbnail" translatable="false">movie_thumbnail</string>
     <string name="transition_television_show_thumbnail" translatable="false">television_show_thumbnail</string>
@@ -16,5 +8,15 @@
     <string name="transition_search_frame_layout" translatable="false">search_frame_layout</string>
     <string name="transition_search" translatable="false">search</string>
 
+    <string name="app_name">MovieHub</string>
+    <string name="movies">Movies</string>
+    <string name="tv_shows">TV Shows</string>
+    <string name="people">People</string>
+    <string name="reload">Reload</string>
+    <string name="check_your_network_connection">Can\'t load data. Check your network connection.</string>
+    <string name="content_desc">Content Description</string>
+    <string name="network_connection_unavailable">Network connection is unavailable.</string>
+    <string name="retry">RETRY</string>
+    <string name="not_available">N/A</string>
 
 </resources>
